--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -233,8 +233,8 @@
 				class="player-button playlist"><i class="fas fa-chevron-up"></i></button>
 
 				<div class="loading-indicator">
-					<i class="fas fa-sync-alt"></i>
-					<span class="label"></span>
+					<div class="player-loading-spinner"></div>
+					<div class="label"></div>
 				</div>
 				<div class="track-title"></div>
 
