player control buttons now have a fixed size, not to push content when they are clicked

--- a/src/css/13-m.css
+++ b/src/css/13-m.css
@@ -144,7 +144,11 @@
 	}
 
 	.player .player-controls {font-size: 1.6em;}
-	.player .playlist, .player .player-controls .player-button {padding: 0 15px;}
+	.player .playlist {padding: 0 15px;}
+	.player .player-controls .player-button {
+		padding: 0;
+		width: 54px;
+	}
 
 
 /*============== Footer ==============*/
