--- a/src/css/12-s.css
+++ b/src/css/12-s.css
@@ -10,7 +10,11 @@
 		padding: 10px 8px;
 	}
 
-	.menu-playlist-wrapper {bottom: 2.5em;}
+	.menu-playlist-wrapper {
+		bottom: 2.5em;
+		max-width: 100%;
+		width: 576px;
+	}
 	.menu-playlist {max-height: calc(80vh - 2.5em);}
 	.menu-playlist .playlist-time {margin-left: 10px;}
 
