--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -242,6 +242,13 @@
 				<span class="progress-time"></span>
 
 				<div class="track-progress-bar">
+					<div class="time-balloon">
+						<div class="time-balloon-time-wrapper shadow-top-small">
+							<div class="time-balloon-time"></div>
+						</div>
+						<div class="time-balloon-pointer"></div>
+					</div>
+
 					<div class="track-progress-bar-background">
 						<div class="track-progress"></div>
 					</div>
