--- a/src/css/10-base.css
+++ b/src/css/10-base.css
@@ -176,6 +176,9 @@ footer .social-icons .bandcamp-link {display: none;} /* There is no bandcamp yet
 	width: 1.15em;
 }
 
+.player .time-balloon {display: none;}
+.player:not(.player-loading) .track-progress-bar:not(.player-error):hover .time-balloon {display: block;}
+
 .player .track-progress-bar-container {padding: 0 10px;}
 .player .track-progress-bar {
 	cursor: pointer;
