--- a/src/css/11-xs.css
+++ b/src/css/11-xs.css
@@ -72,8 +72,11 @@
 		bottom: 3em;
 		width: 100%;
 	}
+	.menu-playlist-wrapper .playlist-search input {
+		margin: 12px 8px 0 8px;
+		padding: 8px 6px;
+	}
 	.menu-playlist {max-height: calc(80vh - 3em);}
-
 	.menu-playlist .playlist-time {margin-left: 5px;}
 
 
