--- a/src/css/00-colors.css
+++ b/src/css/00-colors.css
@@ -13,6 +13,7 @@
 	--menu-background-color: #333;
 	--menu-text-color: #ccc;
 	--menu-icon-inactive-color: #888;
+	--menu-input-background-color: #1c1c1c;
 	--menu-item-hovered: white;
 
 	--menu-separator-strong: #666;
@@ -65,6 +66,14 @@ footer .social-icons a:not(:last-child) {border-right: 1px solid var(--menu-sepa
 	background: var(--menu-background-color);
 	border-right: var(--menu-border-strong);
 	border-top: var(--menu-border-strong);
+}
+
+.menu-playlist-wrapper .playlist-search input {
+	background: var(--menu-input-background-color);
+	color: var(--menu-text-color);
+}
+.menu-playlist-wrapper .playlist-search input::placeholder {
+	color: var(--menu-icon-inactive-color);
 }
 
 .menu li > .menu-item {border-bottom: var(--menu-border-strong);}
