--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -183,7 +183,11 @@
 		<div class="menu-playlist-wrapper shadow-top menu-closed playlist-unavailable">
 
 			<div class="playlist-search">
-				<input type="text" name="search-song" placeholder="{% trans 'Search...' %}">
+				<input
+					type="text"
+					name="search-song"
+					placeholder="{% trans 'Search...' %}"
+					onkeyup="PlayerUi.handleSearch(this)">
 			</div>
 
 			<div class="menu menu-playlist">
