--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -56,6 +56,7 @@
 				"use strict";
 
 				try {
+					if (!('userAgent' in navigator)) return false;
 					if (navigator.userAgent.indexOf('Edge') !== -1 && navigator.userAgent.match(/Edge\/(\d+)/)[1] < 16)
 						throw new Error;
 					if (typeof Symbol === 'undefined') throw new Error;
