--- a/src/css/13-m.css
+++ b/src/css/13-m.css
@@ -44,6 +44,8 @@
 		order: 5;
 	}
 
+	.button-scroll-to-top {display: none;}
+
 
 /*============== Breadcrumbs ==============*/
 	.breadcrumbs {text-align: center;}
