--- a/src/css/20-fa-fallback.css
+++ b/src/css/20-fa-fallback.css
@@ -13,3 +13,4 @@
 .fa-volume-mute:before{content: 'ø)';}
 .fa-volume-up:before{content: 'o)';}
 .fa-compact-disc:before{content: 'Ø';}
+.fa-angle-up:before {content: '↑';}
