--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -295,5 +295,10 @@
 			<span class="label"></span>
 		</div>
 
+		<div
+			id="scroll-to-top-button"
+			class="shadow-bottom button-scroll-to-top hidden"
+			onclick="Menu.scrollToTop()"><i class="fas fa-angle-up"></i></div>
+
 	</body>
 </html>
