--- a/src/css/11-xs.css
+++ b/src/css/11-xs.css
@@ -53,6 +53,12 @@
 		display: none;
 	}
 
+	.button-scroll-to-top {
+		bottom: 100px;
+		font-size: 2.75em;
+		right: 28px;
+	}
+
 
 /*============== Menus ==============*/
 	.menu-language-choice > ul, .menu-main > ul {padding-top: 24px;}
