removed the scrollToTop() function from Menu as it does not belong there

--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -298,7 +298,7 @@
 		<div
 			id="scroll-to-top-button"
 			class="shadow-bottom button-scroll-to-top hidden"
-			onclick="Menu.scrollToTop()"><i class="fas fa-angle-up"></i></div>
+			onclick="window.scrollTo(0, 0);Menu.hideButtonScrollToTop();"><i class="fas fa-angle-up"></i></div>
 
 	</body>
 </html>
