--- a/src/css/12-s.css
+++ b/src/css/12-s.css
@@ -1,6 +1,146 @@
 /**********************************************************************************
- * S sized screen - Phone in landscape orientation or small tablet.
- * Just making use of the wider horizontal space.
+ * Base styles for all S or smaller screens.
+ **********************************************************************************/
+@media screen and (max-width: 47.99em) {
+	.header-container {
+		clear: both;
+		overflow: visible;
+	}
+
+/*============== Logo ==============*/
+	.header-container .logo {float: left;}
+	.header-container .logo > img {
+		height: 100%;
+		width: 100%;
+	}
+
+	.header-container .logo-text {
+		display: none;
+	}
+
+/*============== Ajax spinner ==============*/
+	.ajax-loader {
+		justify-content: flex-start;
+		top: 83px;
+	}
+	.ajax-loader-spinning {width: 150px;}
+
+
+/*============== Breadcrumbs ==============*/
+	.breadcrumbs ul {margin-top: 16px;}
+
+
+/*============== Buttons ==============*/
+	.header-button {
+		float: right;
+		font-size: 2em;
+	}
+	.header-button i {
+		padding: 3px 0;
+	}
+	.toggle-wrapper > .selected i {
+		border-bottom: 2px solid;
+	}
+	.header-container .header-button > .fa-chevron-down,
+	.header-container .header-button > .fa-chevron-up {
+		display: none;
+	}
+
+	.button-scroll-to-top {
+		bottom: 95px;
+		font-size: 2.75em;
+		right: 20px;
+	}
+
+
+/*============== Menus ==============*/
+	.menu-language-choice > ul, .menu-main > ul {padding-top: 24px;}
+	.menu-music > ul {padding-left: 1em;}
+
+	.menu li {
+		margin: 0;
+		padding: 0;
+	}
+
+	.menu:not(.menu-playlist) li > .menu-item {
+		display: block;
+		font-size: 1.15em;
+	}
+
+	.menu-playlist-wrapper {
+		bottom: 3em;
+		width: 100%;
+	}
+	.menu-playlist-wrapper .playlist-search input {
+		margin: 12px 8px 0 8px;
+		padding: 8px 6px;
+	}
+	.menu-playlist {
+		height: 70vh;
+		max-height: calc(70vh - 3em - 50px); /* height - footer - search */
+	}
+	.menu-playlist .playlist-time {margin-left: 5px;}
+
+
+/*============== Content ==============*/
+	/* 100% - header-height - footer - player */
+	.content-wrapper {min-height: calc(100vh - 64px - 2.5em - 3em);}
+	.content {padding: 1.33em 0.67em;}
+
+
+/*============== Player ==============*/
+	.player {height: 3em;}
+	.player .track-progress-bar-container, .player .player-controls .volume {display: none;}
+	.player .player-controls {font-size: 1.7em;}
+	.player .track-title, .player .loading-indicator {margin-right: 5px;}
+
+	.player .playlist, .player .player-controls .player-button {padding: 0 10px;}
+
+
+/*============== Footer ==============*/
+	footer {margin-bottom: 3em;}
+	footer .copyright-first-year, footer .copyright-ds, footer .social-label {display: none;}
+	footer .social-icons a {
+		font-size: 1.8em;
+		padding: 0 10px;
+	}
+	footer .copyright {margin-right: 5px;}
+
+
+/*============== Pages ==============*/
+	.content-tune .tune-title, .content-tune .tune-release-info, .content-tune .tune-links {text-align: center;}
+	.content-tune .tune-links li {
+		display: inline-block;
+		margin: 10px 0;
+	}
+
+	.content-discography .album-contents-wrapper {flex-flow: column;}
+	.content-discography .album-cover {
+		margin: 0;
+		min-width: 11em;
+		text-align: center;
+		width: auto;
+	}
+
+	.content-version-super-wrapper {text-align: center;}
+	.content-version .ascii-logo {
+		font-size: 0.4em;
+		margin: 0;
+		padding: 0 4px;
+	}
+	.content-version .version-info {
+		border-top: 1px solid;
+		margin-top: 6px;
+		max-width: 100%;
+		padding-top: 12px;
+		width: 320px; /* Always keep the table below the logo */
+	}
+	.content-version .version-info-title {margin-top: 0;}
+}
+
+
+/**********************************************************************************
+ * S size only. Just making use of the wider horizontal space.
  **********************************************************************************/
 @media screen and (min-width: 35.5em) and (max-width: 47.99em) {
 	.menu-mobile {margin-right: 16px;}
