--- a/src/css/90-colors.css
+++ b/src/css/90-colors.css
@@ -135,6 +135,14 @@ footer a:hover,
 .shadow-top {box-shadow: var(--shadow-top);}
 .shadow-top-small {box-shadow: var(--shadow-top-small);}
 
+
+@media screen and (max-width: 18em) and (orientation: portrait),
+screen and (max-width: 20em) and (orientation: landscape) {
+	/* All header elements take full height on XXS screens, so no shadows are needed. */
+	.header-container .shadow-bottom {box-shadow: none;}
+	.header-container .logo {border-bottom: 1px solid var(--menu-separator-strong);}
+}
+
 /**
  * Link animations and special effects for desktop
  */
