adjusted content padding on XXS screens

--- a/src/css/10-xxs.css
+++ b/src/css/10-xxs.css
@@ -22,4 +22,8 @@ screen and (max-width: 20em) and (orientation: landscape) {
 		height: 55px;
 		width: 55px;
 	}
+
+
+/*============== Content ==============*/
+	.content {padding: 0.67em;}
 }
