--- a/src/css/11-xs.css
+++ b/src/css/11-xs.css
@@ -24,6 +24,11 @@ screen and (min-width: 20.01em) and (orientation: landscape) {
 		padding: 5px 4px 2px 10px;
 		width: 80px;
 	}
+
+/*============== Content ==============*/
+	/* 100% - header-height - footer - player */
+	.content-wrapper {min-height: calc(100vh - 64px - 2.5em - 3em);}
+	.content {padding: 1.33em 0.67em;}
 }
 
 
