--- a/src/css/10-xxs.css
+++ b/src/css/10-xxs.css
@@ -27,6 +27,13 @@ screen and (max-width: 20em) and (orientation: landscape) {
 /*============== Content ==============*/
 	.content {padding: 0.67em;}
 
+	.content-discography .album-cover {
+		margin-top: 1em;
+	}
+	.content-discography .album-cover .fas {
+		font-size: 9.5em;
+	}
+
 	.content-discography .album-tracks .track-title {
 		display: inline-block;
 		vertical-align: top;
@@ -35,4 +42,5 @@ screen and (max-width: 20em) and (orientation: landscape) {
 	.content-discography .album-tracks .track-length {
 		width: 20%;
 	}
+
 }
