--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -287,7 +287,7 @@
 					class="player-button fas fa-step-backward"></button><button
 					id="pl-play"
 					title="{% trans 'Play / Pause' %}"
-					aria-label="{% trans 'Play/Pause currenct song' %}"
+					aria-label="{% trans 'Play/Pause current song' %}"
 					onclick="Player.playToggle()"
 					class="player-button fas fa-play"></button><button
 					id="pl-next"
