Dimmu Saurus in Soundcloud

--- a/src/css/20-fa-fallback.css
+++ b/src/css/20-fa-fallback.css
@@ -6,6 +6,7 @@
 .fa-chevron-up:before{content: '^';}
 .fa-bandcamp:before{content: 'B';}
 .fa-facebook-square:before{content: 'F';}
+.fa-soundcloud:before{content: 'S';}
 .fa-youtube:before{content: 'Y';}
 .fa-play:before{content: '>';}
 .fa-step-backward:before{content: '|<';}
