--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -228,7 +228,12 @@
 						aria-label="{% trans 'Go to Dimmu Saurus Youtube channel' %}"
 						href="https://www.youtube.com/playlist?list=PLBugGYGZgZWcA8ePOBLDdyD1__D7WWxMI"
 						target="_blank"
-						rel="me noopener"><i class="fab fa-youtube"></i></a>
+						rel="me noopener"><i class="fab fa-youtube"></i></a><a
+						title="{% trans 'Dimmu Saurus Soundcloud page' %}"
+						aria-label="{% trans 'Go to Dimmu Saurus Soundcloud page' %}"
+						href="https://soundcloud.com/beeuisri12mz"
+						target="_blank"
+						rel="me noopener"><i class="fab fa-soundcloud"></i></a>
 				</div>
 			</div>
 
