--- a/src/css/01-base.css
+++ b/src/css/01-base.css
@@ -349,6 +349,18 @@ footer .copyright-copy, footer .copyright-last-year {
 	text-align: right;
 	width: 45px;
 }
+.content-discography .album-tracks .album-duration-container {
+	margin: 0 0 10px 0;
+	text-align: right;
+}
+.content-discography .album-tracks .album-duration-container .album-duration-separator {
+	border-top: 1px solid;
+	margin-left: 37px;
+	padding: 6px 1px 0 0;
+}
+.content-discography .album-tracks .album-duration-container .album-duration-label {
+	margin-right: 5px;
+}
 
 .content-discography .license-notice {padding: 0 10px;}
 
