--- a/src/py/music/templates/music/albums.html
+++ b/src/py/music/templates/music/albums.html
@@ -27,19 +27,29 @@
 			{% endif %}
 		</div>
 
-		<ol class="album-tracks">
-			{% for sd in song_descriptions %}
+		<div class="album-tracks">
+			<ol>
+				{% for sd in song_descriptions %}
 
-				{% if sd.song.album_id == a.album_id and not sd.song.is_hidden %}
-					<li>
-						<a class="track-title" href="{{ sd.song.get_absolute_url }}">
-							{{ sd.translated_title }}
-						</a>
-						<span class="track-length"> {{ sd.song.duration }} </span>
-					</li>
+					{% if sd.song.album_id == a.album_id and not sd.song.is_hidden %}
+						<li>
+							<a class="track-title" href="{{ sd.song.get_absolute_url }}">
+								{{ sd.translated_title }}
+							</a>
+							<span class="track-length"> {{ sd.song.duration }} </span>
+						</li>
+					{% endif %}
+				{% endfor %}
+			</ol>
+
+			{% for al in album_durations %}
+				{% if al.album_id == a.album_id %}
+					<div class="album-duration-container">
+						<div class="album-duration-separator">{{ al.album_duration }}</div>
+					</div>
 				{% endif %}
 			{% endfor %}
-		</ol>
+		</div>
 	</div>
 
 </div>
