replaced the .png logo with an .svg

--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -96,7 +96,7 @@
 				<div class="logo-text logo-text-left">Dimmu</div>
 
 				<div class="logo shadow-bottom">
-					<img src="{% static 'img/dimmu-saurus-250-krio.png' %}" alt="" />
+					<img src="{% static 'img/dimmu-saurus.svg' %}" alt="" />
 				</div>
 
 				<div class="logo-text logo-text-right">Saurus</div>
