--- a/src/css/12-s.css
+++ b/src/css/12-s.css
@@ -79,7 +79,8 @@
 		height: 70vh;
 		max-height: calc(70vh - 3em - 50px); /* height - footer - search */
 	}
-	.menu-playlist .playlist-time {margin-left: 5px;}
+	.menu-playlist .playlist-time, .menu-playlist .playlist-info {margin-left: 5px;}
+	.menu-playlist .playlist-info {padding: 5px 0 5px 2px;}
 
 
 /*============== Player ==============*/
@@ -157,7 +158,7 @@
 		height: 80vh;
 		max-height: calc(80vh - 3em - 50px); /* height - footer - search */
 	}
-	.menu-playlist .playlist-time {margin-left: 10px;}
+	.menu-playlist .playlist-time, .menu-playlist .playlist-info {margin-left: 10px;}
 
 	.button-scroll-to-top {
 		bottom: 75px;
