--- a/src/css/20-fa-fallback.css
+++ b/src/css/20-fa-fallback.css
@@ -15,3 +15,4 @@
 .fa-volume-up:before{content: 'o)';}
 .fa-compact-disc:before{content: 'Ø';}
 .fa-angle-up:before {content: '↑';}
+.fa-info-circle:before {content: '(i)';}
