--- a/src/css/01-base.css
+++ b/src/css/01-base.css
@@ -156,10 +156,12 @@ footer .social-icons .bandcamp-link {display: none;} /* There is no bandcamp yet
 .menu-playlist li > .menu-item {
 	cursor: auto;
 	display: flex;
+	padding: 0 8px;
 }
 .menu-playlist .menu-item > span, .menu-playlist .menu-item > a {
 	margin-bottom: auto;
 	margin-top: auto;
+	padding: 12px 0;
 }
 .menu-playlist .playlist-title {
 	cursor: pointer;
